--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <div class="row">
           <div class="icons-bar">
             <div class="social">
-              <img src="/img/icons/telegram.png" alt="telegram">
-              <img src="/img/icons/whatsapp.png" alt="whatsapp">
+              <img src="img/icons/telegram.png" alt="telegram">
+              <img src="img/icons/whatsapp.png" alt="whatsapp">
             </div>
             <div class="button-sos">
               <h3>SOS</h3>
