--- a/index.html
+++ b/index.html
@@ -103,6 +103,26 @@
             </div>
           
           </div>
+          <!-- sobre so aparece no mobile  -->
+          <div id="mobile-sobre" class="sobre">
+            <div class="sobre-texto">
+              <div>
+                <h1>100 Desculpas para denunciar</h1>
+                <h3>Chega de DESCULPAS! Você não está mais sozinha!</h3>
+              </div>
+              <div>
+                <p>Assim como não existem desculpas para a violência contra a mulher, não há mais desculpas para não pedir ajuda,
+                  denunciar qualquer tipo de agressão ou abuso que você esteja sofrendo. </p>
+                <p>Desculpas como dificuldades de deslocamento, medo, falta tempo, vergonha agora não tem vez. </p>
+                <p>O portal 100 desculpas disponibiliza na palma da sua mão as ferramentas necessárias para denunciar, pedir ajuda
+                  e enfrentar qualquer tipo de agressão que você venha sofrendo.</p>
+                <p><strong>Deixe o 100 Desculpas te ajudar!</strong></p>
+              </div>
+            </div>
+            <div class="sobre-logo">
+              <img src="img/logos/logo-b.png" alt="Logo Branca">
+            </div>
+          </div>
         </div>
       </div>
 
@@ -129,32 +149,11 @@
         </div>
       </div>
     </header>
-
-    <!-- section1 - Estatisticas -->
-    <section id="estatisticas" class="py-bottom">
-      <div >
-        <h1 class="title"> Estatísticas</h1>
-        <div class="container">
-          <div class="estatistica">
-            <div class="estatistica1">
-              <img src="img/genero.jpg" alt="">
-            </div>
-            <div class="estatistica2">
-              <h2>Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas</h2>
-              <p>A igualdade de gênero não é apenas um direito humano fundamental, mas a base necessária para a construção de um mundo pacífico, próspero e sustentável. O esforço de alcance do ODS 5 é transversal à toda Agenda 2030 e reflete a crescente evidência de que a igualdade de gênero tem efeitos multiplicadores no desenvolvimento sustentável.
-                Muitos avanços em termos de assegurar melhores condições de vida a mulheres e meninas são um importante legado dos ODM. Os Objetivos de Desenvolvimento Sustentável visam intensificar estas realizações, não apenas nas áreas de saúde, educação e trabalho, mas especialmente no combate às discriminações e violências baseadas no gênero e na promoção do empoderamento de mulheres e meninas para que possam atuar enfaticamente na promoção do desenvolvimento sustentável, por meio da participação na política, na economia, e em diversas áreas de tomada de decisão.
-                O desenvolvimento sustentável não será alcançado se as barreiras tangíveis e intangíveis que impedem o pleno desenvolvimento e exercício das capacidades de metade da população não forem eliminadas.</p>
-                <div class="btn-denuncie">Continue lendo</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     <!-- sobre -->
     <section id="sobre" class="py-bottom">
       <h1 class="title"> Sobre</h1>
       <div class="container">
-        <div class="sobre">
+        <div id="sobre-desktop" class="sobre">
           <div class="sobre-texto">
             <div>
               <h1>100 Desculpas para denunciar</h1>
@@ -186,6 +185,36 @@
       </div>
 
     </section>
+    <!-- section1 - Estatisticas -->
+    <section id="estatisticas" class="py-bottom">
+      <div>
+        <h1 class="title"> Estatísticas</h1>
+        <div class="container">
+          <div class="estatistica">
+            <div class="estatistica1">
+              <img src="img/genero.jpg" alt="">
+            </div>
+            <div class="estatistica2">
+              <h2>Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas</h2>
+              <p>A igualdade de gênero não é apenas um direito humano fundamental, mas a base necessária para a construção
+                de um mundo pacífico, próspero e sustentável. O esforço de alcance do ODS 5 é transversal à toda Agenda 2030
+                e reflete a crescente evidência de que a igualdade de gênero tem efeitos multiplicadores no desenvolvimento
+                sustentável.
+                Muitos avanços em termos de assegurar melhores condições de vida a mulheres e meninas são um importante
+                legado dos ODM. Os Objetivos de Desenvolvimento Sustentável visam intensificar estas realizações, não apenas
+                nas áreas de saúde, educação e trabalho, mas especialmente no combate às discriminações e violências
+                baseadas no gênero e na promoção do empoderamento de mulheres e meninas para que possam atuar enfaticamente
+                na promoção do desenvolvimento sustentável, por meio da participação na política, na economia, e em diversas
+                áreas de tomada de decisão.
+                O desenvolvimento sustentável não será alcançado se as barreiras tangíveis e intangíveis que impedem o pleno
+                desenvolvimento e exercício das capacidades de metade da população não forem eliminadas.</p>
+              <div class="btn-denuncie">Continue lendo</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <section id="legislacao" class="py-bottom">
       <h1 class="title"> Legilação</h1>
