--- a/index.html
+++ b/index.html
@@ -120,9 +120,21 @@
               </div>
             </div>
             <div class="sobre-logo">
-              <img src="img/logos/logo-b.png" alt="Logo Branca">
+              <img src="img/logos/logo-v.png" alt="Logo vermelha">
             </div>
-          </div>
+            <h1>Você não está sozinha!</h1>
+            <div class="teste">
+              <div class="card">
+                <div class="card-body">
+                  <h1>NÃO SABE IDENTIFICAR SE VOCÊ É VÍTIMA DE VIOLÊNCIA DOMÉSTICA?</h1>
+                  <img src="img/teste.svg" alt="Imagem pro teste">
+                  <div class="btn-denuncie">Acesse para fazer o teste</div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="btn-denuncie">▼ Continue lendo ▼</div>
+              </div>
         </div>
       </div>
 
