--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
               </div>
 
               <div class="tab">
-                <button class="tablinks" onclick="openCity(event, 'sobre-page')">Sobre</button>
-                <button class="tablinks" onclick="openCity(event, 'estatistica-page')">Estatisticas</button>
-                <button class="tablinks" onclick="openCity(event, 'legislacao-page')">Legislação</button>
-                <button class="tablinks" onclick="openCity(event, 'medidas-page')">Legislação</button>
-                <button class="tablinks" onclick="openCity(event, 'denuncie-page')">Denuncie</button>
-                <button class="tablinks" onclick="openCity(event, 'colaboradores-page')">Colaboradores</button>
-                <button class="tablinks" onclick="openCity(event, 'contato-page')">Contato</button>
+                <button class="tablinks" onclick="openItem(event, 'sobre-page')">Sobre</button>
+                <button class="tablinks" onclick="openItem(event, 'estatistica-page')">Estatisticas</button>
+                <button class="tablinks" onclick="openItem(event, 'legislacao-page')">Legislação</button>
+                <button class="tablinks" onclick="openItem(event, 'medidas-page')">Legislação</button>
+                <button class="tablinks" onclick="openItem(event, 'denuncie-page')">Denuncie</button>
+                <button class="tablinks" onclick="openItem(event, 'colaboradores-page')">Colaboradores</button>
+                <button class="tablinks" onclick="openItem(event, 'contato-page')">Contato</button>
               </div>
               
               <div id="sobre-page" class="tabcontent">
