--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               </div>
               
               <div id="legislacao-page" class="tabcontent">
-                <section id="legislacao" class="py-bottom">
+                <section id="" class="py-bottom">
                   <h1 class="title"> Legilação</h1>
                   <div class="container">
                     <div class="legislacao">
@@ -261,7 +261,7 @@
               </div>
 
               <div id="medidas-page" class="tabcontent">
-                <section id="medidas" class="medidas">
+                <section id="" class="medidas">
                   <div class="container">
                     <div class="medidas-texto">
                       <h1>Algumas medidas protetivas</h1>
@@ -300,7 +300,7 @@
               </div>
 
               <div id="denuncie-page" class="tabcontent">
-                <section class="denuncie py-bottom" id="denuncie">
+                <section class="denuncie py-bottom" id="">
                   <h1 class="title">Denuncie</h1>
                   <div class="container">
                     <h2>Algumas formas de você conseguir denunciar</h2>
@@ -323,7 +323,7 @@
               </div>
 
               <div id="colaboradores-page" class="tabcontent">
-                <section id="colaborador" class="colaborador py-bottom">
+                <section id="" class="colaborador py-bottom">
                   <h1 class="title"> Colaboradores</h1>
                   <div class="container">
                     <div class="colaboradores">
@@ -363,7 +363,7 @@
               </div>
 
               <div id="contato-page" class="tabcontent">
-                <section id="contato" class="contato">
+                <section id="" class="contato">
                   <h1 class="title" style="color: white;"> Fale conosco</h1>
                   <div class="container">
                     <div class="fale-conosco">
