--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <button class="tablinks" onclick="openItem(event, 'sobre-page')">Sobre</button>
                 <button class="tablinks" onclick="openItem(event, 'estatistica-page')">Estatisticas</button>
                 <button class="tablinks" onclick="openItem(event, 'legislacao-page')">Legislação</button>
-                <button class="tablinks" onclick="openItem(event, 'medidas-page')">Legislação</button>
+                <button class="tablinks" onclick="openItem(event, 'medidas-page')">Medidas</button>
                 <button class="tablinks" onclick="openItem(event, 'denuncie-page')">Denuncie</button>
                 <button class="tablinks" onclick="openItem(event, 'colaboradores-page')">Colaboradores</button>
                 <button class="tablinks" onclick="openItem(event, 'contato-page')">Contato</button>
@@ -290,7 +290,7 @@
                 </section>
               </div>
 
-              <div id="denuncie-page" class="tabcontent">
+              <div id="denuncie-page" class="tabcontent py-bottom">
                 <section class="denuncie py-bottom" id="">
                   <h1 class="title">Denuncie</h1>
                   <div class="container">
@@ -355,7 +355,7 @@
 
               <div id="contato-page" class="tabcontent">
                 <section id="" class="contato">
-                  <h1 class="title" style="color: white;"> Fale conosco</h1>
+                  <h1 class="title""> Fale conosco</h1>
                   <div class="container">
                     <div class="fale-conosco">
                       <div class="card">
@@ -378,7 +378,7 @@
               </div>
         </div>
       </div>
-
+<!-- fim dos item para mobile -->
 
 
       <!-- aparece em dispositivos acima de 800px width  -->
