--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
            <div class="menu-desktop">
               <li><a href="#header">Inicio</a></li>
               <li><a href="#sobre">Sobre</a></li>
-              <li><a href="#estatisticas">Estatísticas</a></li> 
+              <li><a href="#estatisticas">Agenda 2030</a></li> 
               <li><a href="#legislacao">Legislação</a></li>
               <li><a href="#denuncie">Denuncie</a></li>
               <li><a href="#colaborador">Colaboradores</a></li>
@@ -167,7 +167,7 @@
 
               <div class="tab">
                 <button class="tablinks" onclick="openItem(event, 'sobre-page')">Sobre</button>
-                <button class="tablinks" onclick="openItem(event, 'estatistica-page')">Estatisticas</button>
+                <button class="tablinks" onclick="openItem(event, 'estatistica-page')">Agenda 2030</button>
                 <button class="tablinks" onclick="openItem(event, 'legislacao-page')">Legislação</button>
                 <button class="tablinks" onclick="openItem(event, 'medidas-page')">Medidas</button>
                 <button class="tablinks" onclick="openItem(event, 'denuncie-page')">Denuncie</button>
@@ -198,7 +198,7 @@
               <div id="estatistica-page" class="tabcontent">
                 <section id="estatisticas pageestatistica" class="py-bottom">
                   <div>
-                    <h1 class="title"> Estatísticas</h1>
+                    <h1 class="title"> Agenda 2030</h1>
                     <div class="container">
                       <div class="estatistica">
                         <div class="estatistica1">
@@ -228,7 +228,7 @@
               
               <div id="legislacao-page" class="tabcontent">
                 <section id="" class="py-bottom">
-                  <h1 class="title"> Legilação</h1>
+                  <h1 class="title"> Legislação</h1>
                   <div class="container">
                     <div class="legislacao">
                       <div class="legislacao-logo">
@@ -391,11 +391,16 @@
                           <h1>Faça sua denúncia</h1>
                           <p>Faça  sua denúncia de forma simples, preencha os campos que entraremos em contato.</p>
                           <div class="form">
-                            <form action="">
-                              <input type="text" name="fnome" id="fnome" placeholder="Nome completo">
-                              <input type="email" name="femail" id="femail" placeholder="E-mail">
-                              <textarea name="ftextarea" id="ftextarea" cols="30" rows="10" placeholder="Escreva com quiser..."></textarea>
+                            <form action="https://formsubmit.co/sos100desculpas@gmail.com" method="POST">
+                              <input type="text" name="nome" id="nome" placeholder="Nome completo" required>
+                              <input type="email" name="email" id="email" placeholder="E-mail" required>
+                              <textarea name="message" id="message" cols="30" rows="10" placeholder="Escreva com quiser..."></textarea>
                               <button type="submit" class="btn-denuncie">Enviar</button>
+          
+                              <input type="hidden" name="_next" value="https://storepac.github.io/100desculpas/">
+                              <input type="hidden" name="_subject" value="Nova denúncia recebida!">
+                              <input type="text" name="_honey" style="display: none;">
+                              <input type="hidden" name="_captcha" value="false">
                             </form>
                           </div>
                         </div>
@@ -477,7 +482,7 @@
       <!-- section1 - Estatisticas -->
       <section id="estatisticas" class="py-bottom">
         <div>
-          <h1 class="title"> Estatísticas</h1>
+          <h1 class="title">Agenda 2030</h1>
           <div class="container">
             <div class="estatistica">
               <div class="estatistica1">
@@ -506,7 +511,7 @@
 
     <!-- legislação -->
       <section id="legislacao" class="py-bottom">
-        <h1 class="title"> Legilação</h1>
+        <h1 class="title"> Legislação</h1>
         <div class="container">
           <div class="legislacao">
             <div class="legislacao-logo">
@@ -674,11 +679,16 @@
                 <h1>Faça sua denúncia</h1>
                 <p>Faça  sua denúncia de forma simples, preencha os campos que entraremos em contato.</p>
                 <div class="form">
-                  <form action="">
-                    <input type="text" name="fnome" id="fnome" placeholder="Nome completo">
-                    <input type="email" name="femail" id="femail" placeholder="E-mail">
-                    <textarea name="ftextarea" id="ftextarea" cols="30" rows="10" placeholder="Escreva com quiser..."></textarea>
+                  <form action="https://formsubmit.co/sos100desculpas@gmail.com" method="POST">
+                    <input type="text" name="nome" id="nome" placeholder="Nome completo" required>
+                    <input type="email" name="email" id="email" placeholder="E-mail" required>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Escreva com quiser..."></textarea>
                     <button type="submit" class="btn-denuncie">Enviar</button>
+
+                    <input type="hidden" name="_next" value="https://storepac.github.io/100desculpas/">
+                    <input type="hidden" name="_subject" value="Nova denúncia recebida!">
+                    <input type="text" name="_honey" style="display: none;">
+                    <input type="hidden" name="_captcha" value="false">
                   </form>
                 </div>
               </div>
