--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="header-menu">
         <nav id="nav">
           <div class="logo">
-            <img id="logo-red" src="img/logo-lado.png" alt="">
-            <img id="logo-branco" src="img/logo-branco.png" alt="">
+            <a href="https://storepac.github.io/100desculpas/"><img id="logo-red" src="img/logo-lado.png" alt=""></a>
+            <a href="https://storepac.github.io/100desculpas/"><img id="logo-branco" src="img/logo-branco.png" alt=""></a>
           </div>
           <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
             <span id="hamburger"></span>
@@ -397,7 +397,7 @@
                               <textarea name="message" id="message" cols="30" rows="10" placeholder="Escreva com quiser..."></textarea>
                               <button type="submit" class="btn-denuncie">Enviar</button>
           
-                              <input type="hidden" name="_next" value="https://storepac.github.io/100desculpas/">
+                              <input type="hidden" name="_next" value="https://storepac.github.io/100desculpas/" method="POST">
                               <input type="hidden" name="_subject" value="Nova denúncia recebida!">
                               <input type="text" name="_honey" style="display: none;">
                               <input type="hidden" name="_captcha" value="false">
@@ -685,7 +685,7 @@
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Escreva com quiser..."></textarea>
                     <button type="submit" class="btn-denuncie">Enviar</button>
 
-                    <input type="hidden" name="_next" value="https://storepac.github.io/100desculpas/">
+                    <input type="hidden" name="_next" value="https://storepac.github.io/100desculpas/" method="POST">
                     <input type="hidden" name="_subject" value="Nova denúncia recebida!">
                     <input type="text" name="_honey" style="display: none;">
                     <input type="hidden" name="_captcha" value="false">
