--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                       
                       <div class="col1">
                         <div class="col1-img">
-                         <img src="img/perfil.png" alt="Perfil">
+                         <img src="img/henri.jpg" alt="Henri">
                         </div>
                          <div class="col1-texto">
                            <p>Autor: <strong>HENRI FRANCIS DE OLIVERIA RUIZ</strong> </p>
@@ -358,7 +358,7 @@
                        </div>
                        <div class="col1">
                         <div class="col1-img">
-                         <img src="img/perfil.png" alt="Perfil">
+                         <img src="img/maria.jpg" alt="DR. Maria Geralda">
                         </div>
                          <div class="col1-texto">
                            <p>Co-autorea: <strong>MARIA GERALDA DE MIRANDA</strong> </p>
@@ -367,7 +367,7 @@
                        </div>
                        <div class="col1">
                         <div class="col1-img">
-                         <img src="img/perfil.png" alt="Perfil">
+                         <img src="img/eu.jpg" alt="Anderson Oliveira">
                         </div>
                          <div class="col1-texto">
                           <p>Desenvolvedor do site: <strong>ANDERSON</strong> </p>
