--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
               </div>
               
             </div>
-            <p style="text-align: center;"><a href="">Tech For Web - 2022 &copy;</a></p>
+            <p style="text-align: center;"><a href="https://storepac.github.io/techforweb/" target="_blank">Tech For Web - 2022 &copy;</a></p>
           </div>
         </section>
 
