--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         </div>
                          <div class="col1-texto">
                           <p>Desenvolvedor do site: <strong>ANDERSON OLIVEIRA</strong> </p>
-                          <p>Técnico em Tecnologia da Informação – Instituto Paula Souza, Tupã/SP </p>
+                          <p>Técnico em Informática para Internet e Redes de Computadores – Instituto Paula Souza, Tupã/SP </p>
                          </div>
                        </div>
                     </div>
@@ -660,7 +660,7 @@
               </div>
               <div class="col1-texto">
                 <p>Desenvolvedor do site: <strong>ANDERSON OLIVEIRA</strong> </p>
-                <p>Técnico em Tecnologia da Informação – Instituto Paula Souza, Tupã/SP </p>
+                <p>Técnico em Informática para Internet e Redes de Computadores – Instituto Paula Souza, Tupã/SP </p>
               </div>
             </div>
           </div>
