--- a/index.html
+++ b/index.html
@@ -428,9 +428,10 @@
         </div>
         <div class="row">
           <div class="icons-bar">
-            <div class="social">
-              <img src="img/icons/telegram.png" alt="telegram">
-              <img src="img/icons/whatsapp.png" alt="whatsapp">
+            <div class="social" ">
+              <a href=""><img src="img/icons/facebook.png" alt="Facebook"></a>
+              <a href=""><img src="img/icons/instagram.png" alt="Instagram"></a>
+              <a href=""><img src="img/icons/whatsapp.png" alt="whatsapp"></a>
             </div>
             <div class="box-pulse">
               <a href="https://www.webdenuncia.org.br/cidadao/denuncie" target="_blank" class="botao-pulse">SOS</a>
