--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
       <div id="model-desktop" class="container">
         <div class="row">
           <div class="right">
-            <p>Violencia doméstica</p>
+            <p>Violência doméstica</p>
             <h3>A violência doméstica acontece contra crianças, adolescentes, mulheres e idosos, sendo que os agressores são os próprios familiares das vítimas.</h3>
             <p>Não se cale, denuncie LIGUE 180!</p>
           </div>
