--- a/index.html
+++ b/index.html
@@ -423,15 +423,18 @@
           <div class="right">
             <p>Violência doméstica</p>
             <h3>A violência doméstica acontece contra crianças, adolescentes, mulheres e idosos, sendo que os agressores são os próprios familiares das vítimas.</h3>
-            <p>Não se cale, denuncie LIGUE 180!</p>
+            <p>Deixe o 100 Desculpas te ajudar! </p>
+            <div class="link">
+              <a href="https://www.webdenuncia.org.br/cidadao/denuncie" target="_blank" class="btn-denuncie">Denuncie</a>
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="icons-bar">
             <div class="social" ">
               <a href=""><img src="img/icons/facebook.png" alt="Facebook"></a>
-              <a href=""><img src="img/icons/instagram.png" alt="Instagram"></a>
-              <a href=""><img src="img/icons/whatsapp.png" alt="whatsapp"></a>
+              <a href="https://www.instagram.com/sos100desculpas/" target="_blank"><img src="img/icons/instagram.png" alt="Instagram"></a>
+              <a href="https://api.whatsapp.com/send?phone=5514997712216" target="_blank"><img src="img/icons/whatsapp.png" alt="whatsapp"></a>
             </div>
             <div class="box-pulse">
               <a href="https://www.webdenuncia.org.br/cidadao/denuncie" target="_blank" class="botao-pulse">SOS</a>
@@ -445,7 +448,7 @@
     <div class="conteudo-off">
           <!-- sobre -->
       <section id="sobre" class="py-bottom">
-        <h1 class="title"> Sobre</h1>
+        <h1 class="title" style="color: #fff;"> Sobre</h1>
         <div class="container">
           <div id="sobre-desktop" class="sobre">
             <div class="sobre-texto">
@@ -474,7 +477,9 @@
             <br>
             <p>Divulgar toda a rede de acolhimento e apoio existente com amparo psicológico, socioeconômico e socioassistencial às vítimas, inclusive mantendo contato direto com as atendidas através de aplicativos, com constante monitoramento para qualquer assistência que se mostre necessária; </p>
             <p>O portal e o aplicativo 100 Desculpas estão em consonância com os Objetivos Sustentáveis da ONU pela Agenda 2030,  Fomentar o empoderamento da mulher quanto à redução das desigualdades em decorrência de gênero em cumprimento ao direcionamento apresentado pelo ODS nº 5 e surgiu a partir da pesquisa: Violência Doméstica e Quarentena: A subnotificação nos tempos de Pandemia, realizada no âmbito do Programa de Mestrado em Desenvolvimento Local, do Centro Universitário Augusto Motta, UNISUAM, orientado pela Professora Doutora Maria Geralda de Miranda, na linha de pesquisa Estado, Sociedade e Desenvolvimento.  </p>
-
+            <br>
+            <p>O Projeto 100 Desculpas para denunciar é um produto originado através da pesquisa de Mestrado “Apoio e informação às Mulheres vítimas de violência doméstica nos tempos de Pandemia”, dissertação apresentada ao Programa de Pós-Graduação em Desenvolvimento Local, do Centro Universitário Augusto Motta (UNISUAM), como requisito parcial para a obtenção do título de Mestre em Desenvolvimento Local – PPGDL. </p>
+            <p>A pesquisa foi orientada pela Profª Dra. Maria Geralda de Miranda e está vinculada à área de concentração: Desenvolvimento Sustentável e Trabalho. Linha de Pesquisa: Estado Sociedade e Desenvolvimento Local e ao laboratório Laboratório de Políticas Públicas e Governança, LAGO. ODS 5.</p>
           </div>
         </div>
 
@@ -616,7 +621,7 @@
           <h2>Algumas formas de você conseguir denunciar</h2>
           <div class="denuncie-card">
             <div class="card-1 "><img src="img/icons/laptop.png" alt="Delegacia Virtual">
-            <p>Delegacia Virtual <br><a href="https://www.pc.sc.gov.br/" target="_blank">www.pc.sc.gov.br</a></p>
+            <p>Delegacia Virtual <br><a href="https://www.delegaciaeletronica.policiacivil.sp.gov.br/ssp-de-cidadao/pages/comunicar-ocorrencia/violencia-domestica/triagem-de-vitima" target="_blank"><span>Delegacia Eletronica SP</span></a></p>
           </div>
             <div class="card-1"><img src="img/icons/police-station.png" alt="Delegacia mais próxima">
             <p><span>Delegacia</span> mais próxima</p> 
@@ -625,7 +630,7 @@
             <p><span>CRAS</span> mais próximo</p>
           </div>
             <div class="card-1"><img src="img/icons/telephone.png" alt=""> 
-            <p>Disque <span>100</span> ou disque <span>181</span></p></div>
+            <p>Disque <span>190</span> ou disque <span>180</span></p></div>
           </div>
         </div>
 
@@ -651,7 +656,7 @@
               <img src="img/maria.jpg" alt="DR. Maria Geralda">
               </div>
               <div class="col1-texto">
-                <p>Co-autorea: <strong>MARIA GERALDA DE MIRANDA</strong> </p>
+                <p>Co-autoria: <strong>MARIA GERALDA DE MIRANDA</strong> </p>
               <p>Pós doutora em Políticas Públicas e Formação Humana pela Universidade do Estado do Rio de Janeiro (UERJ). Pesquisadora do Programa de Pós-graduação em Desenvolvimento Local do Centro Universitário Augusto Motta, UNISUAM, Rio de Janeiro, RJ </p>
               </div>
             </div>
@@ -731,9 +736,9 @@
               </div>
               <div class="footer-colum">
                 <ul>
-                  <li>CRAS de Tupã-SP</li>
-                  <li>R. Machado de Assis, 240 - Parque Pres. Kenedy, Tupã - SP, 17602-590</li>
-                  <li>Telefone: (14) 3496-2969</li>
+                  <li>CRAS de Tupã-SP - Rede Girassol</li>
+                  <li>R. Goitacazes, 654 - Centro. Tupã - SP</li>
+                  <li>Telefone: (14) 3491-2193</li>
                 </ul>
               </div>
               
