--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="header-menu">
         <nav id="nav">
           <div class="logo">
-            <a href="https://storepac.github.io/100desculpas/"><img id="logo-red" src="img/logo-lado.png" alt=""></a>
-            <a href="https://storepac.github.io/100desculpas/"><img id="logo-branco" src="img/logo-branco.png" alt=""></a>
+            <a href="https://sos100desculpas.com.br/"><img id="logo-red" src="img/logo-lado.png" alt=""></a>
+            <a href="https://sos100desculpas.com.br/"><img id="logo-branco" src="img/logo-branco.png" alt=""></a>
           </div>
           <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
             <span id="hamburger"></span>
